--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ Aqui está um código HTML completo para um site de receitas chinesas com duas r
                 <div class="recipe-header">
                     <h2>Yakisoba</h2>
                 </div>
-                <img src="https://unsplash.com/pt-br/fotografias/prato-de-macarrao-na-tigela-de-ceramica-branca-LlPLQGgYuio" alt="Yakisoba" class="recipe-image">
+                <img src="https://images.unsplash.com/photo-1612929633738-8fe44f7ec841" alt="Yakisoba" class="recipe-image">
                 <div class="recipe-content">
                     <div class="history">
                         <h3>História e Cultura</h3>
