--- a/index.html
+++ b/index.html
@@ -1,14 +1,9 @@
-# Site de Receitas Chinesas: Yakisoba e Frango Xadrez
-
-Aqui está um código HTML completo para um site de receitas chinesas com duas receitas populares: Yakisoba e Frango Xadrez, incluindo seus modos de preparo e contexto cultural.
-
-```html
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sabores da China - Receitas Autênticas</title>
+    <title>Receitas do Ko Yuen Tai</title>
     <style>
         :root {
             --primary-color: #e74c3c;
@@ -122,7 +117,7 @@ Aqui está um código HTML completo para um site de receitas chinesas com duas r
 <body>
     <header>
         <div class="container">
-            <h1>Sabores da China</h1>
+            <h1>Receitas do Ko Yuen Tai</h1>
             <p>Receitas autênticas e suas histórias culturais</p>
         </div>
     </header>
