--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                 <div class="recipe-header">
                     <h2>Frango Xadrez</h2>
                 </div>
-                <img src="https://images.unsplash.com/photo-1604977042946-4449cf6e9c6a" alt="Frango Xadrez" class="recipe-image">
+                <img src="https://img.cybercook.com.br/receitas/786/frango-xadrez-6-840x480.jpeg?q=75" alt="Frango Xadrez" class="recipe-image">
                 <div class="recipe-content">
                     <div class="history">
                         <h3>História e Cultura</h3>
